# hlsl2glslfork

./: .gitignore  CMakeLists.txt
cmake/: ExtractSymbols.cmake  Sanitizers.cmake
hlslang/GLSLCodeGen/: glslCommon.cpp  glslCommon.h  glslFunction.cpp  glslFunction.h  glslOutput.cpp  glslOutput.h  glslStruct.cpp  glslStruct.h  glslSymbol.cpp  glslSymbol.h  hlslCrossCompiler.cpp  hlslCrossCompiler.h  hlslLinker.cpp  hlslLinker.h  hlslSupportLib.cpp  hlslSupportLib.h  propagateMutable.cpp  propagateMutable.h  typeSamplers.cpp  typeSamplers.h
hlslang/Include/: BaseTypes.h  Common.h  InfoSink.h  InitializeGlobals.h  InitializeParseContext.h  PoolAlloc.h  Types.h  intermediate.h
hlslang/MachineIndependent/: ConstantFolding.cpp  HLSL2GLSL.cpp  InfoSink.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  RemoveTree.cpp  RemoveTree.h  SymbolTable.cpp  SymbolTable.h  hlslang.l  hlslang.y  intermOut.cpp  localintermediate.h
hlslang/MachineIndependent/preprocessor/: sourceloc.cpp  sourceloc.h
hlslang/OSDependent/Linux/: osinclude.h  ossource.cpp
include/: hlsl2glsl.h
tests/: CMakeLists.txt  unit_tests.cpp  unit_tests_async.cpp  unit_tests_common.h
tools/: extract_symbols.py
